antlr/LALGParser.js
// Generated from ./antlr/LALG.g4 by ANTLR 4.13.0
// jshint ignore: start
import antlr4 from 'antlr4';
import LALGListener from './LALGListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class LALGParser extends antlr4.Parser {

    static grammarFileName = "LALG.g4";
    static literalNames = [ null, "'program'", "';'", "'.'", "'int'", "'boolean'", 
                            "','", "'procedure'", "'('", "')'", "':'", "'begin'", 
                            "'end'", "':='", "'if'", "'then'", "'else'", 
                            "'while'", "'do'", "'='", "'<>'", "'<'", "'<='", 
                            "'>='", "'>'", "'+'", "'-'", "'or'", "'*'", 
                            "'div'", "'and'", "'not'", "'['", "']'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "DIGITO", "LETRA", "WS" ];
    static ruleNames = [ "programa", "bloco", "declaracao_variaveis", "tipo", 
                         "lista_identificadores", "declaracao_subrotinas", 
                         "declaracao_procedimento", "parametros_formais", 
                         "secao_parametros_formais", "comando_composto", 
                         "comando", "atribuicao", "chamada_procedimento", 
                         "comando_condicional", "comando_repetitivo", "expressao", 
                         "relacao", "expressao_simples", "termo", "fator", 
                         "variavel", "lista_expressoes", "identificador", 
                         "numero" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = LALGParser.ruleNames;
        this.literalNames = LALGParser.literalNames;
        this.symbolicNames = LALGParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, LALGParser.RULE_programa);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 48;
	        this.match(LALGParser.T__0);
	        this.state = 49;
	        this.identificador();
	        this.state = 50;
	        this.match(LALGParser.T__1);
	        this.state = 51;
	        this.bloco();
	        this.state = 52;
	        this.match(LALGParser.T__2);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bloco() {
	    let localctx = new BlocoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, LALGParser.RULE_bloco);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===4 || _la===5) {
	            this.state = 54;
	            this.declaracao_variaveis();
	            this.state = 55;
	            this.match(LALGParser.T__1);
	            this.state = 61;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 65;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2 || _la===7) {
	            this.state = 62;
	            this.declaracao_subrotinas();
	            this.state = 63;
	            this.match(LALGParser.T__1);
	        }

	        this.state = 67;
	        this.comando_composto();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracao_variaveis() {
	    let localctx = new Declaracao_variaveisContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, LALGParser.RULE_declaracao_variaveis);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        this.tipo();
	        this.state = 70;
	        this.lista_identificadores();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo() {
	    let localctx = new TipoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, LALGParser.RULE_tipo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        _la = this._input.LA(1);
	        if(!(_la===4 || _la===5)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_identificadores() {
	    let localctx = new Lista_identificadoresContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, LALGParser.RULE_lista_identificadores);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.identificador();
	        this.state = 79;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 75;
	            this.match(LALGParser.T__5);
	            this.state = 76;
	            this.identificador();
	            this.state = 81;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracao_subrotinas() {
	    let localctx = new Declaracao_subrotinasContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, LALGParser.RULE_declaracao_subrotinas);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===7) {
	            this.state = 82;
	            this.declaracao_procedimento();
	            this.state = 87;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	declaracao_procedimento() {
	    let localctx = new Declaracao_procedimentoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, LALGParser.RULE_declaracao_procedimento);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(LALGParser.T__6);
	        this.state = 89;
	        this.identificador();
	        this.state = 90;
	        this.parametros_formais();
	        this.state = 91;
	        this.match(LALGParser.T__1);
	        this.state = 92;
	        this.bloco();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	parametros_formais() {
	    let localctx = new Parametros_formaisContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, LALGParser.RULE_parametros_formais);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        this.match(LALGParser.T__7);
	        this.state = 95;
	        this.secao_parametros_formais();
	        this.state = 100;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 96;
	            this.match(LALGParser.T__1);
	            this.state = 97;
	            this.secao_parametros_formais();
	            this.state = 102;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 103;
	        this.match(LALGParser.T__8);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	secao_parametros_formais() {
	    let localctx = new Secao_parametros_formaisContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, LALGParser.RULE_secao_parametros_formais);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.lista_identificadores();
	        this.state = 106;
	        this.match(LALGParser.T__9);
	        this.state = 107;
	        this.identificador();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comando_composto() {
	    let localctx = new Comando_compostoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, LALGParser.RULE_comando_composto);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 109;
	        this.match(LALGParser.T__10);
	        this.state = 110;
	        this.comando();
	        this.state = 115;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 111;
	            this.match(LALGParser.T__1);
	            this.state = 112;
	            this.comando();
	            this.state = 117;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 118;
	        this.match(LALGParser.T__11);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comando() {
	    let localctx = new ComandoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, LALGParser.RULE_comando);
	    try {
	        this.state = 125;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 120;
	            this.atribuicao();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 121;
	            this.chamada_procedimento();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 122;
	            this.comando_composto();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 123;
	            this.comando_condicional();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 124;
	            this.comando_repetitivo();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	atribuicao() {
	    let localctx = new AtribuicaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, LALGParser.RULE_atribuicao);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.variavel();
	        this.state = 128;
	        this.match(LALGParser.T__12);
	        this.state = 129;
	        this.expressao();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	chamada_procedimento() {
	    let localctx = new Chamada_procedimentoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, LALGParser.RULE_chamada_procedimento);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 131;
	        this.identificador();
	        this.state = 132;
	        this.match(LALGParser.T__7);
	        this.state = 133;
	        this.lista_expressoes();
	        this.state = 134;
	        this.match(LALGParser.T__8);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comando_condicional() {
	    let localctx = new Comando_condicionalContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, LALGParser.RULE_comando_condicional);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(LALGParser.T__13);
	        this.state = 137;
	        this.expressao();
	        this.state = 138;
	        this.match(LALGParser.T__14);
	        this.state = 139;
	        this.comando();
	        this.state = 142;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 140;
	            this.match(LALGParser.T__15);
	            this.state = 141;
	            this.comando();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	comando_repetitivo() {
	    let localctx = new Comando_repetitivoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, LALGParser.RULE_comando_repetitivo);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 144;
	        this.match(LALGParser.T__16);
	        this.state = 145;
	        this.expressao();
	        this.state = 146;
	        this.match(LALGParser.T__17);
	        this.state = 147;
	        this.comando();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressao() {
	    let localctx = new ExpressaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, LALGParser.RULE_expressao);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 149;
	        this.expressao_simples();
	        this.state = 153;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 33030144) !== 0)) {
	            this.state = 150;
	            this.relacao();
	            this.state = 151;
	            this.expressao_simples();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	relacao() {
	    let localctx = new RelacaoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, LALGParser.RULE_relacao);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 155;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 33030144) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressao_simples() {
	    let localctx = new Expressao_simplesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, LALGParser.RULE_expressao_simples);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===25 || _la===26) {
	            this.state = 157;
	            _la = this._input.LA(1);
	            if(!(_la===25 || _la===26)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 160;
	        this.termo();
	        this.state = 165;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 234881024) !== 0)) {
	            this.state = 161;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 234881024) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 162;
	            this.termo();
	            this.state = 167;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	termo() {
	    let localctx = new TermoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, LALGParser.RULE_termo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168;
	        this.fator();
	        this.state = 173;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 1879048192) !== 0)) {
	            this.state = 169;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1879048192) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 170;
	            this.fator();
	            this.state = 175;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fator() {
	    let localctx = new FatorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, LALGParser.RULE_fator);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 35:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 176;
	            this.variavel();
	            break;
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 177;
	            this.numero();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 178;
	            this.match(LALGParser.T__7);
	            this.state = 179;
	            this.expressao();
	            this.state = 180;
	            this.match(LALGParser.T__8);
	            break;
	        case 31:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 182;
	            this.match(LALGParser.T__30);
	            this.state = 183;
	            this.fator();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variavel() {
	    let localctx = new VariavelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, LALGParser.RULE_variavel);
	    try {
	        this.state = 192;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 186;
	            this.identificador();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 187;
	            this.identificador();
	            this.state = 188;
	            this.match(LALGParser.T__31);
	            this.state = 189;
	            this.expressao();
	            this.state = 190;
	            this.match(LALGParser.T__32);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	lista_expressoes() {
	    let localctx = new Lista_expressoesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 42, LALGParser.RULE_lista_expressoes);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.expressao();
	        this.state = 199;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===6) {
	            this.state = 195;
	            this.match(LALGParser.T__5);
	            this.state = 196;
	            this.expressao();
	            this.state = 201;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identificador() {
	    let localctx = new IdentificadorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 44, LALGParser.RULE_identificador);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 202;
	        this.match(LALGParser.LETRA);
	        this.state = 206;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===34 || _la===35) {
	            this.state = 203;
	            _la = this._input.LA(1);
	            if(!(_la===34 || _la===35)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 208;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 46, LALGParser.RULE_numero);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 210; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 209;
	            this.match(LALGParser.DIGITO);
	            this.state = 212; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===34);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

LALGParser.EOF = antlr4.Token.EOF;
LALGParser.T__0 = 1;
LALGParser.T__1 = 2;
LALGParser.T__2 = 3;
LALGParser.T__3 = 4;
LALGParser.T__4 = 5;
LALGParser.T__5 = 6;
LALGParser.T__6 = 7;
LALGParser.T__7 = 8;
LALGParser.T__8 = 9;
LALGParser.T__9 = 10;
LALGParser.T__10 = 11;
LALGParser.T__11 = 12;
LALGParser.T__12 = 13;
LALGParser.T__13 = 14;
LALGParser.T__14 = 15;
LALGParser.T__15 = 16;
LALGParser.T__16 = 17;
LALGParser.T__17 = 18;
LALGParser.T__18 = 19;
LALGParser.T__19 = 20;
LALGParser.T__20 = 21;
LALGParser.T__21 = 22;
LALGParser.T__22 = 23;
LALGParser.T__23 = 24;
LALGParser.T__24 = 25;
LALGParser.T__25 = 26;
LALGParser.T__26 = 27;
LALGParser.T__27 = 28;
LALGParser.T__28 = 29;
LALGParser.T__29 = 30;
LALGParser.T__30 = 31;
LALGParser.T__31 = 32;
LALGParser.T__32 = 33;
LALGParser.DIGITO = 34;
LALGParser.LETRA = 35;
LALGParser.WS = 36;

LALGParser.RULE_programa = 0;
LALGParser.RULE_bloco = 1;
LALGParser.RULE_declaracao_variaveis = 2;
LALGParser.RULE_tipo = 3;
LALGParser.RULE_lista_identificadores = 4;
LALGParser.RULE_declaracao_subrotinas = 5;
LALGParser.RULE_declaracao_procedimento = 6;
LALGParser.RULE_parametros_formais = 7;
LALGParser.RULE_secao_parametros_formais = 8;
LALGParser.RULE_comando_composto = 9;
LALGParser.RULE_comando = 10;
LALGParser.RULE_atribuicao = 11;
LALGParser.RULE_chamada_procedimento = 12;
LALGParser.RULE_comando_condicional = 13;
LALGParser.RULE_comando_repetitivo = 14;
LALGParser.RULE_expressao = 15;
LALGParser.RULE_relacao = 16;
LALGParser.RULE_expressao_simples = 17;
LALGParser.RULE_termo = 18;
LALGParser.RULE_fator = 19;
LALGParser.RULE_variavel = 20;
LALGParser.RULE_lista_expressoes = 21;
LALGParser.RULE_identificador = 22;
LALGParser.RULE_numero = 23;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_programa;
    }

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	bloco() {
	    return this.getTypedRuleContext(BlocoContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.exitPrograma(this);
		}
	}


}



class BlocoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_bloco;
    }

	comando_composto() {
	    return this.getTypedRuleContext(Comando_compostoContext,0);
	};

	declaracao_variaveis = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Declaracao_variaveisContext);
	    } else {
	        return this.getTypedRuleContext(Declaracao_variaveisContext,i);
	    }
	};

	declaracao_subrotinas() {
	    return this.getTypedRuleContext(Declaracao_subrotinasContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.enterBloco(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.exitBloco(this);
		}
	}


}



class Declaracao_variaveisContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_declaracao_variaveis;
    }

	tipo() {
	    return this.getTypedRuleContext(TipoContext,0);
	};

	lista_identificadores() {
	    return this.getTypedRuleContext(Lista_identificadoresContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.enterDeclaracao_variaveis(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.exitDeclaracao_variaveis(this);
		}
	}


}



class TipoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_tipo;
    }


	enterRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.enterTipo(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.exitTipo(this);
		}
	}


}



class Lista_identificadoresContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_lista_identificadores;
    }

	identificador = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdentificadorContext);
	    } else {
	        return this.getTypedRuleContext(IdentificadorContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.enterLista_identificadores(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof LALGListener ) {
	        listener.exitLista_identificadores(this);
		}
	}


}



class Declaracao_subrotinasContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = LALGParser.RULE_declaracao_subrotinas;
    }

	declaracao_procedimento = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(Declaracao_procedimentoContext);
	    } else {
	        return this.getTypedRuleContext(Declaracao_procedimentoContext,i);
	    }
	};
